--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 </table>
 
 <img src="grafico.png" class="grafico-imagem" alt="">
+<img src="graficodes.png" class="grafico-imagem descendencia" alt="">
 
+
+<p>A pesquisa foi realizada com sete pessoas para coletar informações sobre sua idade e descendência. As informações coletadas indicam que 4 pessoas (57,1%) têm 15 anos e 1 pessoa (14,3%) tem 22 anos.
+<br><br>
+Em relação à descendência, 1 pessoa (14,3%) tem descendência indígena, 2 pessoas (28,6%) têm descendência italiana, 1 pessoa (14,3%) tem descendência portuguesa, 1 pessoa (14,3%) tem descendência alemã e italiana, 1 pessoa (14,3%) tem descendência africana e 1 pessoa (14,3%) tem descendência espanhola.
+<br><br>
+Essas informações podem ser usadas para entender a diversidade étnica e etária da amostra, bem como para realizar análises e comparações com outras amostras ou populações. A porcentagem de cada grupo étnico e etário ajuda a ter uma visão geral da diversidade presente na amostra e a identificar possíveis padrões ou tendências.</p>
 </body>
 </html>
